syntax = "proto3";

option csharp_namespace = "gRPC_Client_Server";

service Customer{
	rpc GetCustomerInfo (CustomerLookUpModel) returns (customerModel)  ;
	rpc GetNewCustomers (newCustomerRequest) returns (stream customerModel) ; 
}
message CustomerLookUpModel{
	int32 userId=1;
	 
}
message customerModel{

	string firstName= 1; 
	string lastName=2 ; 
	string emailAddress=3 ; 
	bool isAlive=4 ;
	int32 age=5 ; 
}
message newCustomerRequest{

}
/*
to return a multiple using stream 
to returen an array using repeated or repeats
*/